Tue Apr 13 13:46:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * USAGE:

          Removed ACE specific references and documentation.

        * modules/ProjectCreator.pm:

          Added wildcard support (*?[]) for component lists and the ability
          to exclude files from the component lists by preceding the name
          with '!'.

          ex.
          project {
            Source_Files {
              // Get every source file, except foo.cpp
              !foo.cpp
            }
          }

          project {
            Source_Files {
              // Get every cpp file that starts with RT
              RT*.cpp
            }
          }

        * modules/Parser.pm:
        * modules/TemplateParser.pm:

          Added the ability for the TemplateParser to cache the contents of
          a template to avoid opening and reading the project template over
          and over again.

Mon Apr 12 11:38:29 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Added more file types to exclude during cloning.

        * modules/Creator.pm:

          We still need to maintain the real set of files added for
          generation of the workspace.

        * modules/WorkspaceCreator.pm:

          Added more information to the error message when duplicate
          projects are found within a workspace.

Mon Apr 12 10:00:56 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Switched the files_written structure to a hash array instead of an
          array to make searches within that structure faster.

        * modules/WorkspaceCreator.pm:

          When generating workspaces, only write out the workspace if it is
          the main workspace that corresponds to an mwc file or it hasn't
          been written out yet.

        * templates/vc7.mpd:
        * templates/vc7dll.mpt:
        * templates/vc7exe.mpt:
        * templates/vc7lib.mpt: